tests/neg/semantic_time_now_bad_arity.baa
// EXPECT: عدد معاملات 'وقت_حالي' غير صحيح

صحيح الرئيسية() {
    صحيح ن = وقت_حالي(١).
    إرجع ن.
}
